Add list of tips

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -11,5 +11,40 @@
     <ion-toolbar>
       <ion-title size="large">Dicas</ion-title>
     </ion-toolbar>
+    <ion-content fullscreen>
+      <ion-list>
+        <ion-item>
+          <ion-label>
+            <h2>1°</h2>
+            <h3>Pratique exercícios físicos</h3>
+            <p>A saúde da mente começa pelo corpo.</p>
+          </ion-label>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>
+            <h2>2°</h2>
+            <h3>Mantenha a agenda em dia</h3>
+            <p>Uma das principais manifestações da depressão é a falta de iniciativa.</p>
+          </ion-label>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>
+            <h2>3°</h2>
+            <h3>Alimente-se bem</h3>
+            <p>Não comer é clássico de quem sofre de depressão.</p>
+          </ion-label>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>
+            <h2>4°</h2>
+            <h3>Fuja do álcool</h3>
+            <p>Embora a sensação inicial seja de felicidade, o sentimento dura pouco.</p>
+          </ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-content>
   </ion-header>
 </ion-content>
