--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -25,7 +25,7 @@
           <ion-label>
             <h2>2°</h2>
             <h3>Mantenha a agenda em dia</h3>
-            <p>Uma das principais manifestações da depressão é a falta de iniciativa.</p>
+            <p>Uma das manifestações é a falta de iniciativa.</p>
           </ion-label>
         </ion-item>
 
@@ -41,7 +41,15 @@
           <ion-label>
             <h2>4°</h2>
             <h3>Fuja do álcool</h3>
-            <p>Embora a sensação inicial seja de felicidade, o sentimento dura pouco.</p>
+            <p>A sensação boa dura pouco.</p>
+          </ion-label>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>
+            <h2>5°</h2>
+            <h3>Fique perto de quem gosta de você</h3>
+            <p>Amigos e familía são os melhores remédios!</p>
           </ion-label>
         </ion-item>
       </ion-list>
