Add breathing image

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -12,4 +12,6 @@
       <ion-title size="large">Ansiedade</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <img src="https://dailyburn.com/life/wp-content/uploads/2016/04/circle-gif-2.gif">
 </ion-content>
