Adicionando tela de Login
Adicionando login, cadastro e a validacao.

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Segunda Tela
+      Ansiedade
     </ion-title>
   </ion-toolbar>
 </ion-header>
