--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,9 +1,15 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Login</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content padding>
+  <ion-list>
+    <ion-item>
+      <ion-input placeholder="Username" [(ngModel)]="username"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-input placeholder="Password" type="Password" [(ngModel)]="password"></ion-input>
+    </ion-item>
+  </ion-list>
 
-<ion-content>
+  <ion-button shape="round" expand="full" (click)="goLogin()">Login</ion-button>
+  <ion-button shape="round" expand="full" color="light" (click)="goRegister()">Cadastrar</ion-button>
 
 </ion-content>
+
