--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,13 +1,16 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Dicas para controlar Ansiedade
+      Dicas
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-header>
+<ion-content [fullscreen]="true">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">Dicas</ion-title>
+    </ion-toolbar>
     <ion-content fullscreen>
       <ion-list>
         <ion-item>
@@ -49,47 +52,6 @@
             <p>Amigos e familía são os melhores remédios!</p>
           </ion-label>
         </ion-item>
-
-        <ion-item>
-          <ion-label>
-            <h2>6°</h2>
-            <h3>Fique perto de quem gosta de você</h3>
-            <p>Amigos e familía são os melhores remédios!</p>
-          </ion-label>
-        </ion-item>
-
-        <ion-item>
-          <ion-label>
-            <h2>7°</h2>
-            <h3>Mantenha o foco de atenção no presente</h3>
-            <p>Quando sua mente está dedicada integralmente ao momento atual, você tem total capacidade de análise, julgamento e ação!</p>
-          </ion-label>
-        </ion-item>
-
-        <ion-item>
-          <ion-label>
-            <h2>8°</h2>
-            <h3>Seja mais organizado</h3>
-            <p>Quem vive na bagunça gasta tempo para achar o que precisa</p>
-          </ion-label>
-        </ion-item>
-
-        <ion-item>
-          <ion-label>
-            <h2>9°</h2>
-            <h3>Dedique tempo para se cuidar</h3>
-            <p>Reservar algum tempo do dia para você e ser capaz de ouvir suas reais necessidades</p>
-          </ion-label>
-        </ion-item>
-
-        <ion-item>
-          <ion-label>
-            <h2>10°</h2>
-            <h3>Cuide dos pensamentos para sorrir mais</h3>
-            <p>Atenção ao que você pensa, pois isso terá impacto direto no seu humor</p>
-          </ion-label>
-        </ion-item>
-
       </ion-list>
     </ion-content>
   </ion-header>
