--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -6,16 +6,20 @@
 
 <ion-content padding>
   <ion-list>
+
     <ion-item>
       <ion-input placeholder="Username" [(ngModel)]="username"></ion-input>
     </ion-item>
+
     <ion-item>
       <ion-input placeholder="Password" type="Password" [(ngModel)]="password"></ion-input>
     </ion-item>
+
   </ion-list>
 
-  <ion-button shape="round" expand="full" (click)="salva()">Salvar Usuario</ion-button>
+  <ion-button shape="round" expand="full" (click)="save()">Salvar Usuario</ion-button>
   <ion-button shape="round" expand="full" color="light" (click)="goBack()">Voltar</ion-button>
+  <ion-button shape="round" expand="full" color="light" (click)="load()">MostrarInfo</ion-button>
 
 
 </ion-content>
