Add new phrases and titles

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -8,7 +8,7 @@
     </ion-item>
   </ion-list>
 
-  <ion-button shape="round" expand="full" (click)="goLogin()">Login</ion-button>
+  <ion-button shape="round" expand="full" (click)="goLogin()">Entrar</ion-button>
   <ion-button shape="round" expand="full" color="light" (click)="goRegister()">Cadastrar</ion-button>
 
 </ion-content>
