--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>register</ion-title>
+    <ion-title>Cadastro</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -17,9 +17,7 @@
 
   </ion-list>
 
-  <ion-button shape="round" expand="full" (click)="save()">Salvar Usuario</ion-button>
+  <ion-button shape="round" expand="full" (click)="save()">Criar Usuario</ion-button>
   <ion-button shape="round" expand="full" color="light" (click)="goBack()">Voltar</ion-button>
-  <ion-button shape="round" expand="full" color="light" (click)="load()">MostrarInfo</ion-button>
-
-
+  <ion-button shape="round" expand="full" color="light" (click)="load()">Mostrar Info</ion-button>
 </ion-content>
