--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -90,6 +90,38 @@
           </ion-label>
         </ion-item>
 
+        <ion-item>
+          <ion-label>
+            <h2>11°</h2>
+            <h3>Pensamentos positivos sempre são bem-vindos</h3>
+            <p>Atenção ao que você pensa, pois isso terá impacto direto no seu humor</p>
+          </ion-label>
+        </ion-item>
+      
+        <ion-item>
+          <ion-label>
+            <h2>12°</h2>
+            <h3>Mantenha-se sempre disposto para tudo</h3>
+            <p>Só existem dois dias do ano em que você não pode fazer nada: um se chama ontem e outro amanhã</p>
+          </ion-label>
+        </ion-item>
+      
+        <ion-item>
+          <ion-label>
+            <h2>13°</h2>
+            <h3>A persistência deve ser sua maior companheira</h3>
+            <p>A vida é um constante recomeço. Não se dê por derrotado e siga adiante. As pedras que hoje atrapalham sua caminhada amanhã enfeitarão a sua estrada</p>
+          </ion-label>
+        </ion-item>
+      
+        <ion-item>
+          <ion-label>
+            <h2>14°</h2>
+            <h3>O foco e a vontade devem sempre ser as prioridades</h3>
+            <p>Ouse ir além, ouse fazer diferente e o poder lhe será dado!</p>
+          </ion-label>
+        </ion-item>    
+
       </ion-list>
     </ion-content>
   </ion-header>
