--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -122,6 +122,54 @@
           </ion-label>
         </ion-item>    
 
+        <ion-item>
+          <ion-label>
+            <h2>15°</h2>
+            <h3>Nunca perca a esperança</h3>
+            <p>Enquanto houver fé, nunca faltará força!</p>
+          </ion-label>
+        </ion-item> 
+      
+        <ion-item>
+          <ion-label>
+            <h2>16°</h2>
+            <h3>Valorize sua saúde mental e emocional</h3>
+            <p>Sua saúde vale mais do que qualquer cifrão. Cuide-se!</p>
+          </ion-label>
+        </ion-item> 
+      
+        <ion-item>
+          <ion-label>
+            <h2>17°</h2>
+            <h3>Tire um tempo, se afaste de tudo</h3>
+            <p>Às vezes, as coisas só precisam de tempo e distância para que voltem a fazer sentido.</p>
+          </ion-label>
+        </ion-item> 
+      
+        <ion-item>
+          <ion-label>
+            <h2>18°</h2>
+            <h3>Arrisque, vá em frente e sem medo!</h3>
+            <p>Não há motivação maior do que descobrir quão corajosos conseguimos ser.</p>
+          </ion-label>
+        </ion-item> 
+      
+        <ion-item>
+          <ion-label>
+            <h2>19°</h2>
+            <h3>Persista,persevere,insista</h3>
+            <p>O verdadeiro heroísmo consiste em persistir por mais um momento, quando tudo parece perdido.</p>
+          </ion-label>
+        </ion-item> 
+      
+        <ion-item>
+          <ion-label>
+            <h2>20°</h2>
+            <h3>Busque os seus sonhos</h3>
+            <p>Nunca é tarde demais para ser aquilo que sempre desejou ser.</p>
+          </ion-label>
+        </ion-item> 
+
       </ion-list>
     </ion-content>
   </ion-header>
