--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -9,7 +9,7 @@
   </ion-list>
 
   <ion-button shape="round" expand="full" (click)="goLogin()">Entrar</ion-button>
-  <ion-button shape="round" expand="full" color="light" (click)="goRegister()">Cadastrar</ion-button>
+  <ion-button shape="round" expand="full" color="medium" (click)="goRegister()">Cadastrar</ion-button>
 
 </ion-content>
 
