Alterando cor do botao
Alterando a cor do botao na calsse register

--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -18,6 +18,6 @@
   </ion-list>
 
   <ion-button shape="round" expand="full" (click)="save()">Criar Usuario</ion-button>
-  <ion-button shape="round" expand="full" color="light" (click)="goBack()">Voltar</ion-button>
+  <ion-button shape="round" expand="full" color="medium" (click)="goBack()">Voltar</ion-button>
 
 </ion-content>
