--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Ansiedade
+      Controle sua respiração
     </ion-title>
   </ion-toolbar>
 </ion-header>
