Adição de novas frases e dicas
frases e dicas novas

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -170,6 +170,22 @@
           </ion-label>
         </ion-item> 
 
+        <ion-item>
+          <ion-label>
+            <h2>21°</h2>
+            <h3>Ansiedade</h3>
+            <p>O verdadeiro querer não sofre de ansiedade, pois sabe que a vida responde na hora certa.</p>
+          </ion-label>
+        </ion-item> 
+      
+        <ion-item>
+          <ion-label>
+            <h2>22°</h2>
+            <h3>Insegurança</h3>
+            <p>A insegurança te faz acreditar no que ninguém disse.</p>
+          </ion-label>
+        </ion-item> 
+
       </ion-list>
     </ion-content>
   </ion-header>
