--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,5 +1,5 @@
 <ion-content padding>
-  <ion-list>
+  <ion-list id="inputs">
     <ion-item>
       <ion-input placeholder="Username" [(ngModel)]="username"></ion-input>
     </ion-item>
@@ -8,8 +8,8 @@
     </ion-item>
   </ion-list>
 
-  <ion-button shape="round" expand="full" (click)="goLogin()">Entrar</ion-button>
-  <ion-button shape="round" expand="full" color="medium" (click)="goRegister()">Cadastrar</ion-button>
+  <ion-button class="button" shape="round" expand="full" (click)="goLogin()">Entrar</ion-button>
+  <ion-button class="button" shape="round" expand="full" color="medium" (click)="goRegister()">Cadastrar</ion-button>
 
 </ion-content>
 
