Fix login and tabs layout

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,3 +1,9 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-title>Sign In</ion-title>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content padding>
   <ion-list id="inputs">
     <ion-item>
