--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -15,10 +15,16 @@
 
   <ion-card>
     <ion-card-header>
+      <ion-card-subtitle>Leia as frases abaixo</ion-card-subtitle>
+    </ion-card-header>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
       <ion-card-title>Estamos pensando em você...</ion-card-title>
     </ion-card-header>
 
-    <ion-card-content id="frase"></ion-card-content>
+    <ion-card-content id="frase">Você é incrível!</ion-card-content>
   </ion-card>
 
   <ion-button color="secondary" (click)='funcButton()' class="ButtonPosition"> Aperte aqui </ion-button>
