--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -6,10 +6,14 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-header>
-    <ion-content fullscreen>
-      <ion-list>
+<ion-content [fullscreen]="true" class="container">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">Dicas</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
+  <ion-list>
         <ion-item>
           <ion-label>
             <h2><b>1°</b></h2>
@@ -187,6 +191,4 @@
         </ion-item> 
 
       </ion-list>
-    </ion-content>
-  </ion-header>
 </ion-content>
