Change Ansiedade tab

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -13,5 +13,11 @@
     </ion-toolbar>
   </ion-header>
 
+  <ion-card id="card">
+    <ion-card-header>
+      <ion-card-subtitle>Está ancioso? Fique tranquilo...</ion-card-subtitle>
+    </ion-card-header>
+  </ion-card>
+
   <img src="https://dailyburn.com/life/wp-content/uploads/2016/04/circle-gif-2.gif">
 </ion-content>
