--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -15,6 +15,11 @@
       <ion-icon name="ribbon-outline"></ion-icon>
       <ion-label>Dicas</ion-label>
     </ion-tab-button>
+
+    <ion-tab-button tab="tab4">
+      <ion-icon name="create"></ion-icon>
+      <ion-label>Anotações</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 
 </ion-tabs>
