--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -6,11 +6,30 @@
 
 <ion-content [fullscreen]="true" class="container">
   <ion-header collapse="condense">
-    
     <ion-toolbar>
       <ion-title size="large">Anotações</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-list>
+
+    <ion-item>
+      <ion-label>
+        <h2><b>1°</b></h2>
+        <h3>Pratique exercícios físicos</h3>
+        <p>A saúde da mente começa pelo corpo.</p>
+      </ion-label>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>
+        <h2><b>2°</b></h2>
+        <h3>Mantenha a agenda em dia</h3>
+        <p>Uma das manifestações é a falta de iniciativa.</p>
+      </ion-label>
+    </ion-item>
+    
+  </ion-list>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button (click)="goToNote()">
