Adição de uma lista de dicas
adição de lista

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -20,4 +20,16 @@
   </ion-card>
 
   <img src="https://dailyburn.com/life/wp-content/uploads/2016/04/circle-gif-2.gif">
+
+  <ion-list>
+    <ion-item>
+      <ion-label>
+        <h2><b>VOCÊ SABIA?</b></h2>
+        <h3>Olá, aqui vai uma dica sobre técnicas de respiração para você controlar sua ansiedade e manter o seu bem-estar!</h3>
+        <p>DICA: Respire fundo, expandindo a barriga. Dê uma pausa. Solte o ar lentamente contando até cinco. Repita quatro vezes! OBS: Dessa maneira, você acalma o sistema nervoso!</p>
+      </ion-label>
+    </ion-item>
+    
+  </ion-list>
+
 </ion-content>
