--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -13,182 +13,5 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-list>
-        <ion-item>
-          <ion-label>
-            <h2><b>1°</b></h2>
-            <h3>Pratique exercícios físicos</h3>
-            <p>A saúde da mente começa pelo corpo.</p>
-          </ion-label>
-        </ion-item>
-
-        <ion-item>
-          <ion-label>
-            <h2><b>2°</b></h2>
-            <h3>Mantenha a agenda em dia</h3>
-            <p>Uma das manifestações é a falta de iniciativa.</p>
-          </ion-label>
-        </ion-item>
-
-        <ion-item>
-          <ion-label>
-            <h2><b>3°</b></h2>
-            <h3>Alimente-se bem</h3>
-            <p>Não comer é clássico de quem sofre de depressão.</p>
-          </ion-label>
-        </ion-item>
-
-        <ion-item>
-          <ion-label>
-            <h2><b>4°</b></h2>
-            <h3>Fuja do álcool</h3>
-            <p>A sensação boa dura pouco.</p>
-          </ion-label>
-        </ion-item>
-
-        <ion-item>
-          <ion-label>
-            <h2><b>5°</b></h2>
-            <h3>Fique perto de quem gosta de você</h3>
-            <p>Amigos e familía são os melhores remédios!</p>
-          </ion-label>
-        </ion-item>
-
-        <ion-item>
-          <ion-label>
-            <h2><b>6°</b></h2>
-            <h3>Fique perto de quem gosta de você</h3>
-            <p>Amigos e familía são os melhores remédios!</p>
-          </ion-label>
-        </ion-item>
-
-        <ion-item>
-          <ion-label>
-            <h2><b>7°</b></h2>
-            <h3>Mantenha o foco de atenção no presente</h3>
-            <p>Quando sua mente está dedicada integralmente ao momento atual, você tem total capacidade de análise, julgamento e ação!</p>
-          </ion-label>
-        </ion-item>
-
-        <ion-item>
-          <ion-label>
-            <h2><b>8°</b></h2>
-            <h3>Seja mais organizado</h3>
-            <p>Quem vive na bagunça gasta tempo para achar o que precisa</p>
-          </ion-label>
-        </ion-item>
-
-        <ion-item>
-          <ion-label>
-            <h2><b>9°</b></h2>
-            <h3>Dedique tempo para se cuidar</h3>
-            <p>Reservar algum tempo do dia para você e ser capaz de ouvir suas reais necessidades</p>
-          </ion-label>
-        </ion-item>
-
-        <ion-item>
-          <ion-label>
-            <h2><b>10°</b></h2>
-            <h3>Cuide dos pensamentos para sorrir mais</h3>
-            <p>Atenção ao que você pensa, pois isso terá impacto direto no seu humor</p>
-          </ion-label>
-        </ion-item>
-
-        <ion-item>
-          <ion-label>
-            <h2><b>11°</b></h2>
-            <h3>Pensamentos positivos sempre são bem-vindos</h3>
-            <p>Atenção ao que você pensa, pois isso terá impacto direto no seu humor</p>
-          </ion-label>
-        </ion-item>
-      
-        <ion-item>
-          <ion-label>
-            <h2><b>12°</b></h2>
-            <h3>Mantenha-se sempre disposto para tudo</h3>
-            <p>Só existem dois dias do ano em que você não pode fazer nada: um se chama ontem e outro amanhã</p>
-          </ion-label>
-        </ion-item>
-      
-        <ion-item>
-          <ion-label>
-            <h2><b>13°</b></h2>
-            <h3>A persistência deve ser sua maior companheira</h3>
-            <p>A vida é um constante recomeço. Não se dê por derrotado e siga adiante. As pedras que hoje atrapalham sua caminhada amanhã enfeitarão a sua estrada</p>
-          </ion-label>
-        </ion-item>
-      
-        <ion-item>
-          <ion-label>
-            <h2><b>14°</b></h2>
-            <h3>O foco e a vontade devem sempre ser as prioridades</h3>
-            <p>Ouse ir além, ouse fazer diferente e o poder lhe será dado!</p>
-          </ion-label>
-        </ion-item>    
-
-        <ion-item>
-          <ion-label>
-            <h2><b>15°</b></h2>
-            <h3>Nunca perca a esperança</h3>
-            <p>Enquanto houver fé, nunca faltará força!</p>
-          </ion-label>
-        </ion-item> 
-      
-        <ion-item>
-          <ion-label>
-            <h2><b>16°</b></h2>
-            <h3>Valorize sua saúde mental e emocional</h3>
-            <p>Sua saúde vale mais do que qualquer cifrão. Cuide-se!</p>
-          </ion-label>
-        </ion-item> 
-      
-        <ion-item>
-          <ion-label>
-            <h2><b>17°</b></h2>
-            <h3>Tire um tempo, se afaste de tudo</h3>
-            <p>Às vezes, as coisas só precisam de tempo e distância para que voltem a fazer sentido.</p>
-          </ion-label>
-        </ion-item> 
-      
-        <ion-item>
-          <ion-label>
-            <h2><b>18°</b></h2>
-            <h3>Arrisque, vá em frente e sem medo!</h3>
-            <p>Não há motivação maior do que descobrir quão corajosos conseguimos ser.</p>
-          </ion-label>
-        </ion-item> 
-      
-        <ion-item>
-          <ion-label>
-            <h2><b>19°</b></h2>
-            <h3>Persista,persevere,insista</h3>
-            <p>O verdadeiro heroísmo consiste em persistir por mais um momento, quando tudo parece perdido.</p>
-          </ion-label>
-        </ion-item> 
-      
-        <ion-item>
-          <ion-label>
-            <h2><b>20°</b></h2>
-            <h3>Busque os seus sonhos</h3>
-            <p>Nunca é tarde demais para ser aquilo que sempre desejou ser.</p>
-          </ion-label>
-        </ion-item> 
-
-        <ion-item>
-          <ion-label>
-            <h2><b>21°</b></h2>
-            <h3>Ansiedade</h3>
-            <p>O verdadeiro querer não sofre de ansiedade, pois sabe que a vida responde na hora certa.</p>
-          </ion-label>
-        </ion-item> 
-      
-        <ion-item>
-          <ion-label>
-            <h2><b>22°</b></h2>
-            <h3>Insegurança</h3>
-            <p>A insegurança te faz acreditar no que ninguém disse.</p>
-          </ion-label>
-        </ion-item> 
-
-      </ion-list>
+  <ion-list id="list"></ion-list>
 </ion-content>
